# gemini-repl-009

./: .clippy.toml  .editorconfig  .env.example  .envrc  .gitignore  CHANGELOG.md  CHANGELOG.org  CONTRIBUTING.org  Cargo.toml  DECISION-001-MVP-FOCUS.md  DEVELOPMENT.md  FEATURE-CLUSTERS.org  FORMAL-VERIFICATION-FINDINGS.md  GH_SECRETS.md  IMPLEMENTATION-PLAN.org  IMPLEMENTATION-ROADMAP.org  ISSUES-ANALYSIS.org  LESSONS-LEARNED.md  LICENSE  Makefile  PHASE-1-2-PLAN.org  README.org  RELEASE_NOTES_v0.1.2.md  REQUIREMENTS.org  RFC-001-CLI-FLAGS-v2.md  RFC-001-CLI-FLAGS.md  SECONDARY-REQUIREMENTS.org  SECURITY.md  SECURITY.org  SELF-HOSTING-PLUGINS-ROADMAP.md  SETUP.org  TEST-PLAN.md  gemini-repl-009.el  main.py  pyproject.toml  run_baseline_tests.sh  rustfmt.toml  test_api_live.sh  test_conversation_api.sh  test_fixed_repl.sh  (+1 more)
.claude/observations/: 2025-07-30-scope-analysis.md  2025-07-31-architecture-analysis.md
.github/workflows/: ci.yml
docs/: ED_TOOL_RFC.md  QEMU_DATOMIC_INTEGRATION.md
experiments/: Makefile  PHASE-1-EXPERIMENTS.md
experiments/000-test-dependencies/: Makefile  README.org
experiments/001-http-proxy-testing/: Makefile  README.md  proxy_config.rs  test_proxy.sh
experiments/002-github-actions/: Makefile  README.md  check_status.sh  notes.md
experiments/003-api-key-test/: Makefile  README.md  test_api.sh
experiments/004-rust-api-client/: Cargo.toml  Makefile  README.md
experiments/004-rust-api-client/src/: main.rs
experiments/005-config-loading/: Cargo.toml  Makefile
experiments/005-config-loading/src/: main.rs
experiments/006-repl-history/: Cargo.toml  Makefile  test_history.txt
experiments/006-repl-history/src/: main.rs
experiments/007-command-parser/: Cargo.toml  Makefile
experiments/007-command-parser/src/: main.rs
experiments/008-error-handling/: Cargo.toml  Makefile
experiments/008-error-handling/src/: main.rs
experiments/009-signal-handling/: Cargo.toml  Makefile
experiments/009-signal-handling/src/: main.rs
experiments/010-api-integration/: Cargo.toml  Makefile
experiments/010-api-integration/src/: main.rs
experiments/011-debug-logging/: Cargo.toml  Makefile
experiments/011-debug-logging/src/: main.rs
experiments/012-request-logging/: Cargo.toml  Makefile
experiments/012-request-logging/src/: main.rs
experiments/013-mock-provider/: Cargo.toml  Makefile
experiments/013-mock-provider/src/: main.rs
experiments/014-api-monitoring/: Cargo.toml  Makefile
experiments/014-api-monitoring/src/: main.rs
experiments/015-ollama-validation/: Makefile  ollama_schemas.json  pyproject.toml  requirements.txt  validate_ollama.py
experiments/016-alloy-demo/: Makefile  README.md  demo.als
experiments/017-alloy-screenshots/: Makefile  capture-alloy.sh  create-demo-gif.sh  simple-alloy-capture.sh  test-x11.sh
experiments/018-emacs-spec-screenshots/: Makefile  capture-emacs-spec.sh  simple-emacs-capture.sh
experiments/019-phase1-tracking/: README.md
experiments/020-streaming-integration/: Makefile  README.md
experiments/021-apilogger-integration/: Makefile
experiments/022-mode-detection/: Makefile
experiments/023-function-calling/: Cargo.toml  Makefile  README.md  RESURRECTION_NOTES.md  TOOL_TRIGGERS.md  generate_report.py  run_test_harness.sh
experiments/023-function-calling/src/: focused_test.rs  harder_test.rs  main.rs  makefile_test.rs  test_runner.rs  test_runner_main.rs
experiments/023-function-calling/test_results/: report_20250729_184112.md  summary_20250729_184112.json
experiments/023-function-calling/tests/: test_cases.json
experiments/024-function-calling-fix/: Cargo.toml  FINAL_RESULTS.md  HYPOTHESIS.md  Makefile  SUMMARY.md  TEST_REPORT.md  baseline_test.sh  debug_response.rs
experiments/024-statistical-evaluation/: Cargo.toml
experiments/024-statistical-evaluation/docs/: presentation-formal-repl-semantics.md
experiments/024-statistical-evaluation/src/: lib.rs  model_checking.rs  property_testing.rs  statistical_framework.rs  test_scenarios.rs
experiments/025-formal-semantics/: Cargo.toml
experiments/025-formal-semantics/src/: lib.rs  operational_semantics.rs
experiments/025-function-calling-proof/: Cargo.toml  Makefile  README.org  analyze_patterns.sh  integration_results_20250730_011621.txt  integration_results_20250730_125618.txt  prove_it_works.sh  run_integration_test.sh  test_simple.sh  test_single.sh
experiments/025-function-calling-proof/src/: main.rs
experiments/026-secure-api-key-management/: Cargo.toml
experiments/026-secure-api-key-management/src/: access_control.rs  audit_logger.rs  key_manager.rs  lib.rs
experiments/027-gemini-flash-lite-deep-eval/: .env.example  .gitignore  ACTUAL_RESULTS.md  BASELINE_RESULTS.md  Cargo.toml  EVALUATION_COMPLETE.md  EVALUATION_LOG.md  EVALUATION_SUMMARY.md  MALFORMED_FUNCTION_CALL_ANALYSIS.md  Makefile  PROGRESS_MILESTONE.md  README.md  RUN_INSTRUCTIONS.md  debug_malformed_call.py  run_chunked_eval.sh
experiments/027-gemini-flash-lite-deep-eval/data/: eval_questions_batch_001.json  eval_questions_batch_002.json  (+38 more)
scripts/: validate_config.py
scripts/freq-analysis/: freq-analyze.sh  letter-freq.sh  top-committers.sh
specs/: ConnectionStateMachine.tla  FrequencyAnalysis.als  FrequencyAnalysis.tla  GeminiProtocol.tla  Makefile  ResponseCodes.als  SessionManagement.als  api-comparison.md  gemini-api-spec.md  gemini-repl-config-spec.md  throttling-error-handling.md  tool-calling-spec.md
src/: api.rs  errors.rs  functions.rs  lib.rs  logging.rs  main.rs  models.rs  self_modification.rs  utils.rs
src/models/: capabilities.rs  mod.rs  provider.rs  registry.rs
src/providers/: mod.rs
src/tools/: code_analysis.rs  ed_tools.rs  file_tools.rs  mod.rs  rust_tools.rs  self_awareness.rs
tests/: function_calling_test.rs  integration_test.rs
tests/baseline/: conversation_tests.sh  tool_calling_scenarios.sh
tests/evals/: after_tools_eval.sh  before_tools_eval.sh
tests/integration/: Makefile  test_advanced.exp  test_basic.exp  test_repl.exp
tests/ollama/: test_ollama_api.sh
tests/unit/: mod.rs
(+15 files in other folders)
