[package]
name = "gemini-repl"
version = "0.9.0"
edition = "2021"
authors = ["AYGP-DR"]
description = "A secure, performant REPL for AI conversations with self-modification capabilities"
license = "MIT"
repository = "https://github.com/aygp-dr/gemini-repl-009"
keywords = ["gemini", "repl", "ai", "cli", "self-modifying"]
categories = ["command-line-utilities", "development-tools"]

# Feature flags
[features]
default = ["self-modification", "api-client"]
self-modification = ["code-analysis", "rust-tools"]
code-analysis = ["syn", "quote", "proc-macro2"]
rust-tools = ["which", "tempfile"]
api-client = []
full-logging = ["tracing-subscriber/json"]

[dependencies]
# Core async runtime and error handling
anyhow = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "fs", "process", "time"] }
async-trait = "0.1"
futures = "0.3"

# CLI and REPL
clap = { version = "4.5", features = ["derive", "env"] }
rustyline = { version = "14.0", default-features = false }

# HTTP and API (optional)
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std", "registry"] }

# Core utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"], default-features = false }
dirs = "5.0"

# Code analysis and manipulation (optional)
syn = { version = "2.0", features = ["full", "visit", "parsing"], optional = true }
quote = { version = "1.0", optional = true }
proc-macro2 = { version = "1.0", optional = true }

# Security and sandboxing (optional)
tempfile = { version = "3.13", optional = true }
which = { version = "6.0", optional = true }

# File operations
walkdir = "2.5"
glob = "0.3"
toml = "0.8"

[dev-dependencies]
tempdir = "0.3"
mockito = "1.5"
proptest = "1.5"
criterion = "0.5"

# Benchmarks will be added later
# [[bench]]
# name = "api_performance"
# harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true