[package]
name = "function-calling-fix"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "debug_response"
path = "debug_response.rs"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }