[package]
name = "statistical-evaluation"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
statrs = "0.16"
indicatif = "0.17"
chrono = "0.4"
csv = "1.3"
plotters = "0.3"
ndarray = "0.15"
ndarray-stats = "0.5"
proptest = "1.0"
quickcheck = "1.0"
quickcheck_macros = "1.0"

# For the REPL client
gemini-repl = { path = "../.." }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "function_calling_benchmark"
harness = false