[package]
name = "formal-semantics"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Formal methods tools
petgraph = "0.6"  # Graph algorithms for state machines
im = "15.1"      # Immutable data structures for functional approach
nom = "7.1"      # Parser combinators for formal syntax

# Visualization
graphviz-rust = "0.9"
plotters = "0.3"

# Property testing
proptest = "1.0"
quickcheck = "1.0"

# For the REPL client
gemini-repl = { path = "../.." }