[package]
name = "function-calling-proof"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "prove_function_calling"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
rand = "0.8"
futures = "0.3"

[dependencies.gemini-repl]
path = "../.."