[package]
name = "secure-api-key-management"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }

# Security dependencies
secrecy = { version = "0.8", features = ["serde"] }
zeroize = { version = "1.7", features = ["derive"] }
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
blake3 = "1.5"
ring = "0.17"
rustls = "0.21"
constant_time_eq = "0.3"

# Key management
keyring = "2.0"  # OS keychain integration
totp-lite = "2.0"  # TOTP for rotation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Audit logging
slog = "2.7"
slog-async = "2.8"
slog-json = "2.6"
slog-term = "2.9"

# Database for secure storage
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "migrate"] }

# Access control
casbin = "2.2"

# For the REPL client
gemini-repl = { path = "../.." }

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[[bench]]
name = "key_operations"
harness = false